# cursor-cplusplus-mathematics-library

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  combinatorics_example.cpp  linear_algebra_example.cpp  main.cpp  probability_example.cpp  statistics_example.cpp
include/: mathlib.hpp
include/mathlib/: combinatorics.hpp  linear_algebra.hpp  numerical.hpp  optimization.hpp  probability.hpp  signal.hpp  statistics.hpp
tests/: CMakeLists.txt  combinatorics_test.cpp  linear_algebra_test.cpp  numerical_test.cpp  optimization_test.cpp  probability_test.cpp  signal_test.cpp  statistics_test.cpp
